// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders OPEN 1`] = `
<StatusCell
  color="#ff9b3f"
  text="Open"
/>
`;

exports[`renders REVIEW_PENDING 1`] = `
<StatusCell
  color="#ff9b3f"
  icon={
    Object {
      "id": "pending",
    }
  }
  text="Pending"
/>
`;

exports[`renders REVIEW_REJECTED 1`] = `
<StatusCell
  color="#e11a25"
  icon={
    Object {
      "id": "rejected",
    }
  }
  text="Rejected"
/>
`;
